compiler/tests/safety/fail/risc-v/loop2.jazz
export
fn poly1305(reg u32 in, reg u32 inlen) -> reg u32 {
  inline int i;
  reg u8 tmp;
  reg u32 one;

  one = 1;
  while (inlen > 0) {
    if inlen >= 16 {
      for i = 0 to 16 {
        tmp = [:u8 in + i];
      }

      in += 16;
      inlen -= 16;

    } else {

    }
  }
  return one;
}
